Add K8s Cilium config

--- a/terraform/Makefile
+++ b/terraform/Makefile
@@ -1,23 +1,20 @@
-.ONESHELL:
-
-DIRS := 10_metal
+DIRS := 10_metal 50_k8s
+SECRETS := $(realpath ../secret.tfvars)
 
 ifeq (,$(shell which terraform))
-  $(error Terraform is not installed. Please install it.)
+	$(error Terraform is not installed. Please install it.)
 endif
 
 define terraform_cmd
-	@if [ ! -d "$1" ]; then \
-		echo "Error: Directory '$1' does not exist." >&2; \
-		exit 1; \
-	fi
-	cd "$1" && terraform $2
+	terraform -chdir="$1" "$2" -var-file="$(SECRETS)"
 endef
 
-$(foreach dir,$(DIRS),$(eval apply-$(dir):; $(call terraform_cmd,$(dir),apply)))
-$(foreach dir,$(DIRS),$(eval destroy-$(dir):; $(call terraform_cmd,$(dir),destroy)))
+$(foreach dir,$(DIRS),$(eval apply-$(dir):; terraform -chdir="$(dir)" apply -var-file="$(SECRETS)"))
+$(foreach dir,$(DIRS),$(eval upgrade-$(dir):; terraform -chdir="$(dir)" init --upgrade))
+$(foreach dir,$(DIRS),$(eval destroy-$(dir):; terraform -chdir="$(dir)" destroy))
 
 apply: $(addprefix apply-,$(DIRS))
-destroy: $(addprefix destroy-,$(DIRS))
+upgrade: $(addprefix upgrade-,$(DIRS))
+destroy: $(addprefix destroy-,$(lastword $(subst  , ,$(DIRS)))) $(addprefix destroy-,$(filter-out $(lastword $(subst  , ,$(DIRS))),$(DIRS)))
 
 .PHONY: apply destroy $(addprefix apply-,$(DIRS)) $(addprefix destroy-,$(DIRS))
