--- a/charts/app/templates/deployment.yaml
+++ b/charts/app/templates/deployment.yaml
@@ -37,7 +37,7 @@ spec:
           env:
             {{- range $name, $value := . }}
             - name: {{ $name }}
-              value: {{ $value }}
+              value: "{{ $value }}"
             {{- end }}
           {{- end }}
           {{- if gt (len .Values.ports) 0 }}
